feat: add authors-api-service
